Updated View Workout log component. Moved exercises to a separate screen with more info shown if the user wants to expand an exercise. Added more info about the workout itself and added a blurred background for the entire component to prevent unwanted clicks outside the component

--- a/src/components/pages/Activity/LogsHistory/LogsHistory.module.css
+++ b/src/components/pages/Activity/LogsHistory/LogsHistory.module.css
@@ -144,214 +144,6 @@
     color: black;
 }
 
-
-
-
-
-
-
-
-  /* View Workout Log */
-
-.tag-body{
-  overflow: hidden;
-  width: fit-content;
-  padding-right: 10px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  align-items: center;
-  height: 30px;
-  background-color: var(--background);
-  border-radius: 5px;
-}
-.tag-color{
-    height: 100%;
-    width: 3px;
-}
-.view-workout-log,
-.view-goal-log,
-.view-food-log,
-.view-exercise-log{
-  width: calc(100vw - 30px);
-  height: 600px;
-  padding: 10px;
-  position: absolute;
-  left: 15px;
-  bottom: 15px;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--modal-bg);
-  border-radius: 10px;
-}
-.log-container{
-  gap: 10px;
-  display: flex;
-  flex-direction: column;
-}
-
-.food-log-details{
-  width: 100%;
-  height: 50px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
-  align-items: center;
-  
-}
-
-.view-goal-log .log-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.view-goal-log{
-  height: 250px;
-}
-.top{
-  width: 100%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.meta{
-  width: 100%;
-  height: 50px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-.log-name{
-  display: flex;
-  gap: 15px;
-  align-items: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-h3{
-  margin: 0;
-}
-.log-timestamp{
-  width: 100%;
-  opacity: 0.5;
-}
-.log-content{
-  
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.infoBlockTags,
-.infoBlockGroups{
-  height: 60px;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-.tags,
-.groups{
-  display: flex;
-  width: 100%;
-  gap: 10px;
-  height: 30px;
-  overflow-x: auto;
-  overflow-y: hidden;
-}
-.group{
-  padding: 5px 10px;
-  background-color: var(--background);
-  border-radius: 5px;
-}
-.workout-details{
-  display: flex;
-  gap: 10px;
-  flex-direction: column;
-  max-height: 200px;
-  min-height: 100px;
-}
-.infoBlock{
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-.workout-log-details .infoBlock{
-  flex-direction: row;
-  width: calc((50% / 2) -10px);
-}
-.workout-log-details{
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  height: 50px;
-  align-items: center;
-}
-.view-goal-log .goal-log-details{
-  width: 100%;
-  height: 50px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
-  align-items: center;
-  margin-top: 10px;
-}
-.view-goal-log .description{
-  width: 100%;
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 10px;
-}
-.view-goal-log label{
-  opacity: 0.5;
-}
-.exercises{
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  border-radius: 5px;
-  gap: 10px;
-  max-height: 260px;
-  flex-grow: 1;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-.exercise{
-  width: 100%;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-.exercise h4{
-  margin-right: auto;
-}
-.finished-ex-icon{
-  width: 30px;
-}
-.view-exercise-log .set{
-  width: 100%;
-  height: 40;
-  display: grid;
-  grid-template-columns: 50px 1fr 40px;
-  align-items: center;
-}
-.view-exercise-log .set .fields-container{
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  align-items: center;
-}
-
-
-
 /* Food Log */
 
 .view-food-log{
